SPA-1369. Hall Monitor PWA layout issues.

--- a/src/app/display-card/display-card.component.scss
+++ b/src/app/display-card/display-card.component.scss
@@ -38,7 +38,7 @@
 
 .display-card-wrapper{
     width: 351px;
-    padding: 25px 22px;
+    padding: 25px 15px;
     box-sizing: border-box;
     border-radius: 12px;
     display: flex;
